2008-12-04  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Prevent unmapping transition for secondary stackable windows. This is a
	temporary fix until the real stackable transitions are added.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_effect_map,
	hd_comp_mgr_effect_unmap):

2008-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_applet_motion): Hide close
	button if an applet is moved. Fixes NB#93709

2008-12-04  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-switcher.c
	* src/home/hd-home.c
	* src/home/hd-task-navigator.c
	* src/home/hd-task-navigator.h
	* src/mb/hd-comp-mgr.c
	* src/mb/hd-comp-mgr.h:
	Allowed main blur to zoom by different amounts (0 for status + dialogs,
        normal for switcher + launcher. Added popup effect for dialogs and 
	blurring of background.

	* src/tidy/tidy-blur-group.c
	* src/tidy/tidy-blur-group.h: Added function to get zoom amount

2008-12-04  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-app.c: Don't accept focus when the clutter actor is hidden.
	  The switcher has an unfortunate habit of hiding actors, about which
	  matchbox knows nothing and may try to transfer focus to an invisible
	  client when another is closed.

2008-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	* debian/changelog: Update changelog.

2008-12-04  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/home/hd-home-view.c (hd_home_view_applet_motion): Show edges of
	  desktop.
	  (hd_home_view_applet_release): Hide edges of desktop.
	* src/home/hd-home.c: Do not show edges if changed in layout mode.

2008-12-04  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/home/hd-home.c: 
	* src/mb/hd-comp-mgr.c: Made status menu blur out the background
	(had to move to front of stage first) and added pop-up animation 
	for status menu. Fixes NB#93217

2008-12-03  Jan Arne Petersen  <jpetersen@openismus.com>
