@@ -778,11 +778,6 @@ hd_switcher_add_dialog (HdSwitcher *switcher, MBWindowManagerClient *mbwmc,
   
   g_return_if_fail (mbwmc->transient_for);  
   
-  /* put this dialog in the foreground and blur the background */ 
-  if (!hd_switcher_showing_switcher (switcher))
-    clutter_actor_reparent(dialog, clutter_stage_get_default());  
-  hd_comp_mgr_blur_home(HD_COMP_MGR(priv->comp_mgr), TRUE, 0);
-  
   parent = mb_wm_comp_mgr_clutter_client_get_actor (
        MB_WM_COMP_MGR_CLUTTER_CLIENT (mbwmc->transient_for->cm_client));
   hd_task_navigator_add_dialog (navigator, parent, dialog);
@@ -840,10 +835,6 @@ hd_switcher_remove_dialog (HdSwitcher * switcher,
   HdSwitcherPrivate *priv = HD_SWITCHER (switcher)->priv;
   HdTaskNavigator *group = HD_TASK_NAVIGATOR (priv->switcher_group);
   hd_task_navigator_remove_dialog (group, dialog);
-  
-  /* put this dialog in the foreground and unblur the background.
-   * FIXME: Can this happen while in the task navigator */ 
-  hd_comp_mgr_blur_home(HD_COMP_MGR(priv->comp_mgr), FALSE, 0);
 }
 
 /* Called when #HdTaskNavigator has finished removing a thumbnail
